MMA-6723 Fjern metrics sidan appd er i bruk og rydd
- Static imports
- Fjern deprecated etter at SB3 blei tatt i bruk