@@ -3,7 +3,6 @@ package no.nav.dokdistkanal.consumer.dki;
 import lombok.extern.slf4j.Slf4j;
 import no.nav.dokdistkanal.azure.TokenConsumer;
 import no.nav.dokdistkanal.azure.TokenResponse;
-import no.nav.dokdistkanal.constants.MDCConstants;
 import no.nav.dokdistkanal.consumer.dki.to.DigitalKontaktinfoMapper;
 import no.nav.dokdistkanal.consumer.dki.to.DigitalKontaktinformasjonTo;
 import no.nav.dokdistkanal.consumer.dki.to.DkifResponseTo;
@@ -12,14 +11,11 @@ import no.nav.dokdistkanal.exceptions.functional.DigitalKontaktinformasjonV2Func
 import no.nav.dokdistkanal.exceptions.functional.DokDistKanalFunctionalException;
 import no.nav.dokdistkanal.exceptions.technical.DigitalKontaktinformasjonV2TechnicalException;
 import no.nav.dokdistkanal.exceptions.technical.DokDistKanalTechnicalException;
-import no.nav.dokdistkanal.metrics.Metrics;
 import org.slf4j.MDC;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.boot.web.client.RestTemplateBuilder;
 import org.springframework.http.HttpEntity;
 import org.springframework.http.HttpHeaders;
-import org.springframework.http.MediaType;
 import org.springframework.retry.annotation.Backoff;
 import org.springframework.retry.annotation.Retryable;
 import org.springframework.stereotype.Component;
@@ -28,19 +24,20 @@ import org.springframework.web.client.HttpServerErrorException;
 import org.springframework.web.client.RestTemplate;
 
 import java.time.Duration;
-import java.util.Arrays;
+import java.util.List;
 
 import static java.lang.String.format;
 import static no.nav.dokdistkanal.constants.DomainConstants.APP_NAME;
-import static no.nav.dokdistkanal.constants.DomainConstants.BEARER_PREFIX;
+import static no.nav.dokdistkanal.constants.MDCConstants.CALL_ID;
 import static no.nav.dokdistkanal.constants.MDCConstants.NAV_CALL_ID;
 import static no.nav.dokdistkanal.constants.MDCConstants.NAV_CONSUMER_ID;
-import static no.nav.dokdistkanal.metrics.MetricLabels.DOK_CONSUMER;
-import static no.nav.dokdistkanal.metrics.MetricLabels.PROCESS_CODE;
+import static org.springframework.http.MediaType.APPLICATION_JSON;
 
 @Slf4j
 @Component
 public class DigitalKontaktinformasjonConsumer implements DigitalKontaktinformasjon {
+
+	public static final String INGEN_KONTAKTINFORMASJON_FEILMELDING = "person_ikke_funnet";
 
 	private final RestTemplate restTemplate;
 	private final String dkiUrl;
@@ -48,8 +45,6 @@ public class DigitalKontaktinformasjonConsumer implements DigitalKontaktinformas
 	private final TokenConsumer tokenConsumer;
 	private final DigitalKontaktinfoMapper digitalKontaktinfoMapper = new DigitalKontaktinfoMapper();
 
-	public static final String HENT_SIKKER_DIGITAL_POSTADRESSE = "hentSikkerDigitalPostadresse";
-	public static final String INGEN_KONTAKTINFORMASJON_FEILMELDING = "person_ikke_funnet";
 
 	public DigitalKontaktinformasjonConsumer(RestTemplateBuilder restTemplateBuilder,
 											 @Value("${digdir_krr_proxy_url}") String dkiUrl,
@@ -62,16 +57,16 @@ public class DigitalKontaktinformasjonConsumer implements DigitalKontaktinformas
 		this.dkiUrl = dkiUrl;
 		this.dkiScope = dkiScope;
 		this.tokenConsumer = tokenConsumer;
-		//test
 	}
 
-	@Retryable(include = DokDistKanalTechnicalException.class, exclude = {DokDistKanalFunctionalException.class}, maxAttempts = 5, backoff = @Backoff(delay = 200))
-	@Metrics(value = DOK_CONSUMER, extraTags = {PROCESS_CODE, HENT_SIKKER_DIGITAL_POSTADRESSE}, percentiles = {0.5, 0.95}, histogram = true)
+	@Retryable(retryFor = DokDistKanalTechnicalException.class, noRetryFor = {DokDistKanalFunctionalException.class}, maxAttempts = 5, backoff = @Backoff(delay = 200))
 	public DigitalKontaktinformasjonTo hentSikkerDigitalPostadresse(final String personidentifikator, final boolean inkluderSikkerDigitalPost) {
 		HttpHeaders headers = createHeaders();
+
 		final String fnrTrimmed = personidentifikator.trim();
-		PostPersonerRequest postPersonRequest = PostPersonerRequest.builder().personidenter(Arrays.asList(fnrTrimmed)).build();
+		PostPersonerRequest postPersonRequest = PostPersonerRequest.builder().personidenter(List.of(fnrTrimmed)).build();
 		HttpEntity<String> request = new HttpEntity(postPersonRequest, headers);
+
 		try {
 			DkifResponseTo response = restTemplate.postForEntity(dkiUrl + "/rest/v1/personer?inkluderSikkerDigitalPost=" + inkluderSikkerDigitalPost, request, DkifResponseTo.class).getBody();
 			if (isValidRespons(response, fnrTrimmed)) {
@@ -110,10 +105,10 @@ public class DigitalKontaktinformasjonConsumer implements DigitalKontaktinformas
 	private HttpHeaders createHeaders() {
 		TokenResponse clientCredentialToken = tokenConsumer.getClientCredentialToken(dkiScope);
 		HttpHeaders headers = new HttpHeaders();
-		headers.setContentType(MediaType.APPLICATION_JSON);
-		headers.set(HttpHeaders.AUTHORIZATION, BEARER_PREFIX + clientCredentialToken.getAccess_token());
+		headers.setContentType(APPLICATION_JSON);
+		headers.setBearerAuth(clientCredentialToken.getAccess_token());
 		headers.add(NAV_CONSUMER_ID, APP_NAME);
-		headers.add(NAV_CALL_ID, MDC.get(MDCConstants.CALL_ID));
+		headers.add(NAV_CALL_ID, MDC.get(CALL_ID));
 		return headers;
 	}
 
